{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 12,
  "lineage": "4673f0a1-cfda-2e7b-46b3-9ab9439fe163",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "spaincentral",
            "name": "private-nsg",
            "resource_group_name": "edustar-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-postgres",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.edustar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "location": "spaincentral",
            "name": "public-nsg",
            "resource_group_name": "edustar-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.edustar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/virtualNetworks/edustar-vnet/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "edustar-rg",
            "virtual_network_name": "edustar-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.edustar",
            "azurerm_virtual_network.edustar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/virtualNetworks/edustar-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "edustar-rg",
            "virtual_network_name": "edustar-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.edustar",
            "azurerm_virtual_network.edustar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "edustar",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1d562720-7bcb-4dab-8b46-6f199b660d37",
            "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/virtualNetworks/edustar-vnet",
            "location": "spaincentral",
            "name": "edustar-vnet",
            "resource_group_name": "edustar-rg",
            "subnet": [
              {
                "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/virtualNetworks/edustar-vnet/subnets/private-subnet",
                "name": "private-subnet"
              },
              {
                "id": "/subscriptions/04f79820-c83e-4fc2-9c32-c30cc1aa49dc/resourceGroups/edustar-rg/providers/Microsoft.Network/virtualNetworks/edustar-vnet/subnets/public-subnet",
                "name": "public-subnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.edustar"
          ]
        }
      ]
    }
  ]
}